@@ -11,7 +11,8 @@ COPY --from=buildtime /build/target/*.jar application.jar
 RUN java -Djarmode=layertools -jar application.jar extract
 
 
-FROM ghcr.io/pagopa/docker-base-springboot-openjdk17:v1.1.3@sha256:a4e970ef05ecf2081424a64707e7c20856bbc40ddb3e99b32a24cd74591817c4
+#FROM ghcr.io/pagopa/docker-base-springboot-openjdk17:v1.1.3@sha256:a4e970ef05ecf2081424a64707e7c20856bbc40ddb3e99b32a24cd74591817c4
+FROM ghcr.io/pagopa/docker-base-springboot-openjdk17@94365a7db61abc9c3b4567669264facd040697f3
 #ADD --chown=spring:spring https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v1.25.1/opentelemetry-javaagent.jar .
 
 COPY --chown=spring:spring  --from=builder dependencies/ ./
@@ -26,4 +27,4 @@ COPY --chown=spring:spring  --from=builder application/ ./
 EXPOSE 8080
 
 # this mode is required in order to inject the JAVA_OPTS from environment
-#ENTRYPOINT exec java $JAVA_OPTS --enable-preview org.springframework.boot.loader.launch.JarLauncher
+#ENTRYPOINT exec java -javaagent:/applicationinsights-agent.jar ${JAVA_OPTS} org.springframework.boot.loader.launch.JarLauncher
